@@ -696,6 +696,7 @@
  - API: Can set the border of a ScreenDockWindow
  ! API: MovingImage now can set an offset and is informed if the underlying window is transparent
  ! API: NoTitleDisplayer gets replaced by NoTitleBarDisplayer. The new displayer extends BasicDockableDisplayer (now all displayer are derived from this class) and is able to show a DockTitle if asked to do so. 
+ - Bugfix: The "showing" property is now checked for correctness when the DockController of a Dockable changes.
  
 [Todo]
 - Drop StackDockStation over Dockable and merge them
